# UR3

./: README.md  rebBoxLone.pcd  sphere.pcd
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/UR3e_RG2_ER5_vision/: SheeMsg.h  UR3Msg.h
devel/lib/UR3e_RG2_ER5_pick_place/: pick_place
devel/lib/UR3e_RG2_ER5_vision/: PCL_publisher  PCL_subscriber  PLC_pipeline  publisher_subscriber_demo
devel/lib/pkgconfig/: UR3e_RG2_ER5_description.pc  UR3e_RG2_ER5_gripper_control.pc  UR3e_RG2_ER5_gripper_gazebo.pc  UR3e_RG2_ER5_moveit_config.pc  UR3e_RG2_ER5_pick_place.pc  UR3e_RG2_ER5_vision.pc  ur10_e_moveit_config.pc  ur10_moveit_config.pc  ur3_e_moveit_config.pc  ur3_moveit_config.pc  ur5_e_moveit_config.pc  ur5_moveit_config.pc  ur_bringup.pc  ur_description.pc  ur_driver.pc  ur_e_description.pc  ur_e_gazebo.pc  ur_gazebo.pc  ur_kinematics.pc  ur_msgs.pc
devel/share/UR3e_RG2_ER5_description/cmake/: UR3e_RG2_ER5_descriptionConfig.cmake
devel/share/UR3e_RG2_ER5_gripper_control/cmake/: UR3e_RG2_ER5_gripper_controlConfig.cmake
devel/share/UR3e_RG2_ER5_gripper_gazebo/cmake/: UR3e_RG2_ER5_gripper_gazeboConfig.cmake
devel/share/UR3e_RG2_ER5_moveit_config/cmake/: UR3e_RG2_ER5_moveit_configConfig.cmake
devel/share/UR3e_RG2_ER5_pick_place/cmake/: UR3e_RG2_ER5_pick_placeConfig.cmake
devel/share/UR3e_RG2_ER5_vision/cmake/: UR3e_RG2_ER5_vision-msg-paths.cmake  UR3e_RG2_ER5_visionConfig.cmake
devel/share/ur10_e_moveit_config/cmake/: ur10_e_moveit_configConfig.cmake
devel/share/ur10_moveit_config/cmake/: ur10_moveit_configConfig.cmake
devel/share/ur3_e_moveit_config/cmake/: ur3_e_moveit_configConfig.cmake
devel/share/ur3_moveit_config/cmake/: ur3_moveit_configConfig.cmake
devel/share/ur5_e_moveit_config/cmake/: ur5_e_moveit_configConfig.cmake
devel/share/ur5_moveit_config/cmake/: ur5_moveit_configConfig.cmake
devel/share/ur_bringup/cmake/: ur_bringupConfig.cmake
devel/share/ur_description/cmake/: ur_descriptionConfig.cmake
devel/share/ur_driver/cmake/: ur_driverConfig.cmake
devel/share/ur_e_description/cmake/: ur_e_descriptionConfig.cmake
devel/share/ur_e_gazebo/cmake/: ur_e_gazeboConfig.cmake
devel/share/ur_gazebo/cmake/: ur_gazeboConfig.cmake
devel/share/ur_kinematics/cmake/: ur_kinematicsConfig.cmake
src/UR3e_RG2_ER5-master/: README.md
src/UR3e_RG2_ER5-master/UR3e_RG2_ER5_vision/: CMakeLists.txt  CMakeLists_default.txt  basic.rviz  package.xml
src/UR3e_RG2_ER5-master/UR3e_RG2_ER5_vision/launch/: depth_img_proc_nodelet.launch  pcl_ros_Background_subtraction.launch  pcl_ros_Background_subtraction_testing.launch  pcl_ros_ConvesHull.launch  pcl_ros_SACSegmentationFromNormals.launch
src/UR3e_RG2_ER5-master/UR3e_RG2_ER5_vision/src/: OpenCv_Images_diff_1ed.py  OpenCv_subtraction.py  PCL_Perception_pipeline_tutorial.cpp  PCL_Visualizer.cpp  PCL_publisher.cpp  PCL_subscriber.cpp  PLC_pipeline.cpp  PLC_pipeline_Origional.cpp  PLC_pipeline_Pub_Sub_Marker_tutorial.cpp  PublisherSubscriber.h  README.txt  image_segmenting.py  publisher_subscriber_demo.cpp  ros_PubliserSubscriber_2nd.py  ros_PubliserSubscriber_3rd.py  ros_PubliserSubscriber_ROI_extraction.py  ros_PubliserSubscriber_ROI_extraction_2nd.py  ros_PubliserSubscriber_ROI_extraction_3rd.py  ros_PubliserSubscriber_ROI_extraction_4th.py  simple_blob_detection.py  smach.py
src/UR3e_RG2_ER5-master/UR3e_RG2_ER5_vision/src/Andrew_files/: kinect_bksubtract1.py
src/UR3e_RG2_ER5/UR3e_RG2_ER5_description/: README.md
src/UR3e_RG2_ER5/UR3e_RG2_ER5_vision/: CMakeLists.txt  README.md  ball.urdf  box.urdf  cylinder.urdf  package.xml
src/UR3e_RG2_ER5/UR3e_RG2_ER5_vision/data/: filtered_sphere.pcd  redBox.pcd  rviz.rviz
src/UR3e_RG2_ER5/UR3e_RG2_ER5_vision/launch/: PCL.launch  camera.launch  pcl_ros_nodelet.launch  usb_cam_ar_track.launch
src/UR3e_RG2_ER5/UR3e_RG2_ER5_vision/msg/: UR3CV.msg  UR3CVKeypoints.msg  UR3CVKeypointsVector.msg  UR3Color.msg  UR3Msg.msg  UR3Numpy.msg
src/UR3e_RG2_ER5/UR3e_RG2_ER5_vision/src/: BG_OpenCV.py  Background_Subtraction_node.py  OpenCV_BGS_Color_SIFT_7th.py  PCL_publisher.cpp  PLC_pipeline.cpp  opencv_subcribto_video.py  ros_PubliserSubscriber.py  ros_PubliserSubscriber_ROI_extraction_4th.py  sift.py  simple_OpenCV_technique.py  simple_camera.py  simple_image.py
src/UR3e_RG2_ER5/UR3e_RG2_ER5_vision/src/Andrew_files/: calibrate_depth_Kinect.py  image_segmenting.py  kinect_bksubtract.py
(+39 files in other folders)
